0.1.24

2016-05-25  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed date issue if locale is not English (thanks to Fulvio Senore)

2016-05-19  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed daylight saving time issue on Windows (thanks to Fulvio Senore)

0.1.23

2016-05-16  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* move variable declaration to beginning of cose block for older C compilers

2016-03-23  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* removed -l from light command line application (without libcurl)

0.1.22

2016-03-23  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added quickmail_send_secure() for SMTPS support (libcurl only)

0.1.21

2015-12-11  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed base64 padding bug (reported by Wojtek Kunda)
	* fixed missing end quote in body separator (reported by Wojtek Kunda)
	* added multi-body support to command line application

0.1.20

2015-10-08  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed some allocation code (reported by Carlos Tangerino)

2015-05-09  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed configure.ac for MinGW static+shared build

0.1.19

2015-04-29  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed curl error "VRFY command is disabled" (Andreas Baumann)

0.1.18

2014-04-07  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed additional line break after Date header
	
0.1.17

2013-11-10  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed Date header to show local time with proper UTC offset

2013-11-05  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed line breaks in source files (UNIX EOL)
	* show only the version of libcurl instead of all its components

0.1.16

2013-10-21  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added code to catch failing malloc/realloc when out of memory

0.1.15
