@@ -4,6 +4,7 @@
 	<Project>
 		<Option title="libquickmail_shared" />
 		<Option pch_mode="2" />
+		<Option default_target="Release64" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
@@ -47,8 +48,9 @@
 				<Option object_output="obj/Release64/" />
 				<Option type="3" />
 				<Option compiler="mingw64" />
-				<Option host_application='bin/Release64/quickmail.exe -o- -f brecht@edustria.be -t brecht@edustria.be -s &quot;Locale test&quot; -d &quot;Locale test&quot;' />
-				<Option run_host_application_in_terminal="0" />
+				<Option parameters=' -o- -f brecht@edustria.be -t brecht@edustria.be -s &quot;Locale test&quot; -d &quot;Locale test&quot;' />
+				<Option host_application="bin/Release64/quickmail.exe" />
+				<Option run_host_application_in_terminal="1" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
